# fast_frechet

./: .clang-format  .clang-tidy  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakeUserPresets.json.EXAMPLE  LICENSE  README.md  benchmark.json  benchmark.json.bak  levenshtein.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_docs.yml  get_coverage.yml  lint.yml  pre_commit.yml  run_tests.yml  viz.yml
cmake/: lint-targets.cmake  lint.cmake
fast_frechet/: __init__.py  __main__.py  _version.py  accumulate.py  batched.py  branchless.py  compiled.py  dtw.py  levenshtein.py  linear_memory.py  no_recursion.py  reduce_accumulate.py  vanilla.py  vectorized.py
ffrechet-baseline/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.EXAMPLE  ffrechet-baseline_toolchain.cmake
ffrechet-baseline/cmake/: install-config.cmake  install-rules.cmake  lint.cmake
ffrechet-baseline/include/ffrechet-baseline/: ffrechet-baseline.hpp
ffrechet-baseline/source/: ffrechet-baseline.cpp
ffrechet-benchmark/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.EXAMPLE  ffrechet-benchmark_toolchain.cmake
ffrechet-benchmark/cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake
ffrechet-benchmark/source/: main.cpp
ffrechet-cuda/: CMakeLists.txt  CMakePresets.json  ffrechet-cuda_toolchain.cmake
ffrechet-cuda/cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake
ffrechet-cuda/include/ffrechet-cuda/: common.hpp  ffrechet-cuda.hpp
ffrechet-cuda/source/: common.cu  ffrechet-cuda.cu
ffrechet-cwrapper/: CMakeLists.txt
ffrechet-cwrapper/cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint.cmake
ffrechet-cwrapper/include/ffrechet-cwrapper/: ffrechet-cwrapper.hpp
ffrechet-data/: CMakeLists.txt
ffrechet-data-printer/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.EXAMPLE
ffrechet-data-printer/cmake/: dev-mode.cmake  install-rules.cmake
ffrechet-data-printer/source/: main.cpp
ffrechet-data/cmake/: install-config.cmake  install-rules.cmake  lint-targets.cmake
ffrechet-data/include/ffrechet-data/: ffrechet-data.hpp
ffrechet-linear/: CMakeLists.txt  CMakePresets.json  ffrechet-linear_toolchain.cmake
ffrechet-linear/cmake/: install-config.cmake  install-rules.cmake
ffrechet-linear/include/ffrechet-linear/: ffrechet-linear.hpp
ffrechet-linear/source/: ffrechet-linear.cpp
ffrechet-simd/: CMakeLists.txt  CMakePresets.json
ffrechet-simd/cmake/: install-config.cmake  install-rules.cmake
ffrechet-simd/include/ffrechet-simd/: ffrechet-simd.hpp
ffrechet-simd/source/: ffrechet-simd.cpp
ffrechet-test/: CMakeLists.txt  CMakePresets.json
ffrechet-test/cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake
ffrechet-test/source/: main.cpp
ffrechet-vanilla/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.EXAMPLE
ffrechet-vanilla/cmake/: install-config.cmake  install-rules.cmake  lint-targets.cmake
ffrechet-vanilla/include/ffrechet-vanilla/: ffrechet-vanilla.hpp
ffrechet-vanilla/source/: ffrechet-vanilla.cpp
paper/: .gitignore  .latexmkrc  appendix.tex  main.tex  sn-article.tex  sn-bibliography.bib  supplementaries.tex
tests/: import_test.py  test_dtw.py  test_frechet.py  test_levenshtein.py
viz/: .gitignore  benchmark.ipynb  conf.py  freespace.ipynb  index.rst  q.json  requirements.txt
