[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = fast_frechet/_version.py
versionfile_build = fast_frechet/_version.py
tag_prefix = v
parentdir_prefix = fast_frechet-

[flake8]
# ignore externals
exclude =
    versioneer.py
    _version.py

# for compatibility with black
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203,E501,E731

[tool:pytest]
testpaths =
    tests
filterwarnings =
  error
  # ignored by default
  ignore::ImportWarning
  ignore::DeprecationWarning
  ignore::PendingDeprecationWarning
  # raised by Cython, usually harmless
  ignore:numpy.dtype size changed:RuntimeWarning
  ignore:numpy.ufunc size changed:RuntimeWarning
  # sometimes, dependencies leak resources
  ignore:.*socket\.socket.*:pytest.PytestUnraisableExceptionWarning
